fixing the overflow of tracemode

--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -503,8 +503,9 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 .switch {
   position: relative;
   display: inline-block;
-  width: 48px;
+  width: 34px;
   height: 20px;
+  overflow: hidden; /* Ensure the slider stays within the button */
 }
 
 .switch input {
@@ -531,10 +532,11 @@ input[type="time"]::-webkit-calendar-picker-indicator {
   content: "";
   height: 14px;
   width: 14px;
-  left: 4px;
-  bottom: 4px;
+  left: 3px;
+  bottom: 3px;
   background-color: white;
   transition: .4s;
+  border-radius: 50%;
 }
 
 input:checked + .slider {
@@ -546,7 +548,7 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  transform: translateX(26px);
+  transform: translateX(14px);
 }
 
 /* Rounded sliders */
